# xmlop-types

./: Cargo.toml  README.md
src/: attribute.rs  cdata.rs  cdata_section.rs  char_data.rs  comment.rs  error.rs  lib.rs  macros.rs  name.rs  ncname.rs  parser.rs  pi.rs  qname.rs  reference.rs  text.rs  text_content.rs  text_node.rs  utils.rs
src/attribute/: value.rs
src/attribute/value/: content.rs  wrapping.rs
src/attribute/value/content/: apos.rs  quot.rs
src/cdata_section/: content.rs  wrapping.rs
src/comment/: content.rs  wrapping.rs
src/name/: ncname.rs  qname.rs
src/parser/: chars.rs
src/pi/: body.rs  target.rs
src/reference/: char.rs  entity.rs
